[CST-3763] fix issue with search-navbar.component z-index

--- a/src/app/search-navbar/search-navbar.component.scss
+++ b/src/app/search-navbar/search-navbar.component.scss
@@ -12,6 +12,8 @@ input[type="text"] {
 
 a.submit-icon {
   cursor: pointer;
+  position: sticky;
+  top: 0;
 }
 
 
